--- a/app/sass/partials/_timer.sass
+++ b/app/sass/partials/_timer.sass
@@ -1,11 +1,23 @@
 .timer
   text-align: center
 
+.task-name
+  padding: 1em
+  border: none
+  text-align: center
+  font-size: 1.5em
+  color: #626263
+  width: 80%
+
+textarea:focus, input:focus
+  outline: none
+
 #circle
   border-radius: 100em
   border: 1px solid #ccc
   width: 500px
   height: 500px
+  margin: 0 auto
 
   .active
     color: #626263
